--- a/src/content/docs/browser-rendering/faq.mdx
+++ b/src/content/docs/browser-rendering/faq.mdx
@@ -20,6 +20,8 @@ Make sure that you are passing your Browser binding to the `puppeteer.launch` ap
 
 Browser rendering requests are always identified as bots by Cloudflare.
 
+If you are trying to **scan** your **own zone**, you can create a [WAF skip rule](/waf/custom-rules/skip/) to bypass the bot protection using a header or a custom user agent.
+
 ## Puppeteer
 
 ##### Code generation from strings disallowed for this context while using an Xpath selector
